--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
+    "ajv": "^6.5.5",
     "moment": "^2.22.2",
     "react": "^16.6.3",
     "react-dom": "^16.5.2",
