--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@material-ui/core": "^3.2.0",
     "@material-ui/icons": "^3.0.1",
     "ajv": "^6.5.5",
+    "draft-js": "^0.10.5",
+    "immutable": "^4.0.0-rc.12",
     "moment": "^2.22.2",
     "react": "^16.6.3",
     "react-dom": "^16.5.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-measure": "^2.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
