added react helmet

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.5.2",
     "react-draft-wysiwyg": "^1.12.13",
     "react-google-recaptcha": "^1.0.5",
+    "react-helmet": "^5.2.0",
     "react-measure": "^2.1.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
