--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-helmet": "^5.2.0",
     "react-measure": "^2.1.2",
     "react-redux": "^5.0.7",
+    "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-spinners": "^0.5.1",
