--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-redux": "^5.0.7",
     "react-responsive": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "^2.1.3",
     "react-spinners": "^0.5.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
